--- a/.env.example
+++ b/.env.example
@@ -9,15 +9,11 @@ SECURITY_KEY=2I74NMw5COJhFbUkAGAXav8dS1OiTeSg
 
 # Database Configuration
 DB_DRIVER=mysql
-DB_SERVER=mariadb
+DB_SERVER=db
 DB_PORT=3306
-DB_DATABASE=craft
-DB_USER=craft
-DB_PASSWORD=craft
+DB_DATABASE=mariadb
+DB_USER=mariadb
+DB_PASSWORD=mariadb
 DB_SCHEMA=
 DB_TABLE_PREFIX=
 
-# The URI segment that tells Craft to load the control panel
-CP_TRIGGER=admin
-
-PRIMARY_SITE_URL=http://localhost:8080/
